Bug 129077 - Impress Template previews in B/W (Skia only)
Summary: Impress Template previews in B/W (Skia only)
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
: 129064 129280 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2019-11-28 10:41 UTC by Julien Nabet
Modified: 2019-12-11 19:20 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (77.95 KB, image/png)
2019-11-28 10:41 UTC, Julien Nabet
Details
screenshot (390.50 KB, image/png)
2019-12-08 20:51 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-11-28 10:41:21 UTC
Description:
On Win10 with master sources updated today + brand new LO profile, I got black and white templates icons when launching Impress whereas the rest is ok.

Steps to Reproduce:
1. Launch LO


Actual Results:
Template icons in black and white

Expected Results:
Template icons in color


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Julien Nabet 2019-11-28 10:41:40 UTC
Created attachment 156165 [details]
screenshot
Comment 2 Julien Nabet 2019-11-28 10:43:38 UTC
Sorry, I think they're previews instead of icons.
Comment 3 Xisco Faulí 2019-11-28 10:50:52 UTC
Skia issue, not a regression IMHO
Comment 4 Julien Nabet 2019-11-28 10:55:36 UTC
(In reply to Xisco Faulí from comment #3)
> Skia issue, not a regression IMHO
Ok I understand that it's not a regression since SKIA isn't enabled by default.
Comment 5 Julien Nabet 2019-11-28 20:51:22 UTC
On pc Debian x86-64 with master sources updated today + gen rendering with SKIA enabled, I could reproduce this.
(so not Windows only)
Comment 6 V Stuart Foote 2019-12-08 20:08:44 UTC
*** Bug 129280 has been marked as a duplicate of this bug. ***
Comment 7 BogdanB 2019-12-08 20:51:06 UTC
Created attachment 156416 [details]
screenshot

Version: 6.5.0.0.alpha0+
Build ID: 5030be4e85179147476b1e441eb618fb6ed58235
CPU threads: 4; OS: Linux 4.15; UI render: Skia/Vulkan; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-11-28_20:14:48
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded

From what I see I have skia, but I dont have this bug. Can you confirm it from my screenshot and info?
Comment 8 Roman Kuznetsov 2019-12-08 20:54:48 UTC
(In reply to BogdanB from comment #7)
> Created attachment 156416 [details]
> screenshot
> 
> Version: 6.5.0.0.alpha0+
> Build ID: 5030be4e85179147476b1e441eb618fb6ed58235
> CPU threads: 4; OS: Linux 4.15; UI render: Skia/Vulkan; VCL: gtk3; 
> TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time:
> 2019-11-28_20:14:48
> Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
> Calc: threaded
> 
> From what I see I have skia, but I dont have this bug. Can you confirm it
> from my screenshot and info?

Possibly it's windows only bug
Comment 9 V Stuart Foote 2019-12-08 22:23:03 UTC
(In reply to Roman Kuznetsov from comment #8)
> 
> Possibly it's windows only bug

No, per comment 5 Julien had it on Linux X11/gen as well.
Comment 10 Luboš Luňák 2019-12-10 11:50:14 UTC
*** Bug 129064 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2019-12-11 14:18:08 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/852bba5478f38edc68bec8d38fba7262474e82ea

do not store 8bpp bitmaps as Skia's SkBitmap (tdf#129077)

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Julien Nabet 2019-12-11 19:20:31 UTC
On pc Debian x86-64 with master sources updated today + gen rendering + SAL_ENABLESKIA=1, I don't reproduce this anymore

Thank you Luboš!