do not store 8bpp bitmaps as Skia's SkBitmap (tdf#129077)

Skia does not support paletted images, so it only supports grayscale 8bpp.
But whether a bitmap is grayscale depends on the palette, and that can
change merely by assigning a different one.

Change-Id: If55d31e46e79ef32f08ecd196ba7a6091d05a13f